// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pagination demo -- pageSize 1`] = `
.c1 {
  vertical-align: baseline;
}

.c4 {
  border-radius: 2px;
  cursor: pointer;
  padding: 0 8px;
  padding-right: 40px;
  box-sizing: border-box;
}

.c5 {
  position: absolute;
  right: 8px;
  top: 50%;
  margin-top: -6px;
}

.c2 {
  box-sizing: border-box;
  position: relative;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  font-size: 12px;
  color: #6b798e;
  background-color: #fff;
}

.c2 .c3 {
  height: 28px;
  line-height: 28px;
  border: 1px solid #c3cad9;
}

.c2 .c3:hover {
  border-color: #4683e6;
}

.c0 {
  color: #6b798e;
  font-size: 12px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  display: inline-block;
  vertical-align: middle;
}

.c0 .uc-fe-pagination-item,
.c0 .uc-fe-pagination-prev,
.c0 .uc-fe-pagination-next,
.c0 .uc-fe-pagination-jump-prev,
.c0 .uc-fe-pagination-jump-next {
  outline: none;
  box-sizing: border-box;
  background-color: #fff;
  text-align: center;
  border-radius: 2px;
  margin-right: 5px;
  cursor: pointer;
  padding: 0 2px;
  display: inline-block;
  vertical-align: middle;
  min-width: 28px;
  height: 28px;
  line-height: 26px;
}

.c0 .uc-fe-pagination-item,
.c0 .uc-fe-pagination-prev,
.c0 .uc-fe-pagination-next {
  border: 1px solid #c3cad9;
}

.c0 .uc-fe-pagination-item:hover,
.c0 .uc-fe-pagination-prev:hover,
.c0 .uc-fe-pagination-next:hover {
  border-color: #4683e6;
  color: #4074e1;
}

.c0 .uc-fe-pagination-jump-prev:hover,
.c0 .uc-fe-pagination-jump-next:hover {
  color: #4074e1;
}

.c0 .uc-fe-pagination-item-active,
.c0 .uc-fe-pagination-item-active:hover {
  border-color: #4683e6;
  color: #4074e1;
  background-color: #f4f9ff;
  cursor: default;
}

.c0 .uc-fe-pagination-disabled,
.c0 .uc-fe-pagination-disabled:hover {
  border-color: #d9d9d9;
  background-color: #f7f7f7;
  cursor: not-allowed;
}

.c0 .uc-fe-pagination-prev-icon,
.c0 .uc-fe-pagination-next-icon {
  cursor: inherit;
}

.c0 .uc-fe-pagination-options,
.c0 .uc-fe-pagination-options-size-changer,
.c0 .uc-fe-pagination-options-quick-jumper {
  display: inline-block;
  vertical-align: middle;
}

.c0 .uc-fe-pagination-options-size-changer {
  margin-right: 5px;
}

.c0 .uc-fe-pagination-options-gobutton {
  margin-left: 5px;
}

<div>
  <div
    class="demo-wrap"
  >
    <ul
      class="uc-fe-pagination uc-fe-pagination-md c0"
      unselectable="unselectable"
    >
      <li
        aria-disabled="true"
        class="uc-fe-pagination-disabled uc-fe-pagination-prev"
        title="上一页"
      >
        <i
          class="uc-fe-pagination-prev-icon uc-fe-icon icon__left c1"
          type="left"
        />
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-1 uc-fe-pagination-item-active"
        tabindex="0"
        title="1"
      >
        <a>
          1
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-2"
        tabindex="0"
        title="2"
      >
        <a>
          2
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-3"
        tabindex="0"
        title="3"
      >
        <a>
          3
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-4"
        tabindex="0"
        title="4"
      >
        <a>
          4
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-5"
        tabindex="0"
        title="5"
      >
        <a>
          5
        </a>
      </li>
      <li
        aria-disabled="false"
        class=" uc-fe-pagination-next"
        tabindex="0"
        title="下一页"
      >
        <i
          class="uc-fe-pagination-next-icon uc-fe-icon icon__right c1"
          type="right"
        />
      </li>
      <li
        class="uc-fe-pagination-options"
      >
        <div
          class="uc-fe-pagination-options-size-changer c2"
        >
          <div>
            <div
              class="c3 c4"
            >
              <div>
                20 条/页
              </div>
              <i
                class="c5 uc-fe-icon icon__down c1"
                type="down"
              />
            </div>
          </div>
        </div>
      </li>
    </ul>
  </div>
  <div
    class="demo-wrap"
  >
    <ul
      class="uc-fe-pagination uc-fe-pagination-md c0"
      unselectable="unselectable"
    >
      <li
        aria-disabled="true"
        class="uc-fe-pagination-disabled uc-fe-pagination-prev"
        title="上一页"
      >
        <i
          class="uc-fe-pagination-prev-icon uc-fe-icon icon__left c1"
          type="left"
        />
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-1 uc-fe-pagination-item-active"
        tabindex="0"
        title="1"
      >
        <a>
          1
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-2"
        tabindex="0"
        title="2"
      >
        <a>
          2
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-3"
        tabindex="0"
        title="3"
      >
        <a>
          3
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-4"
        tabindex="0"
        title="4"
      >
        <a>
          4
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-5"
        tabindex="0"
        title="5"
      >
        <a>
          5
        </a>
      </li>
      <li
        aria-disabled="false"
        class=" uc-fe-pagination-next"
        tabindex="0"
        title="下一页"
      >
        <i
          class="uc-fe-pagination-next-icon uc-fe-icon icon__right c1"
          type="right"
        />
      </li>
      <li
        class="uc-fe-pagination-options"
      >
        <div
          class="uc-fe-pagination-options-size-changer c2"
        >
          <div>
            <div
              class="c3 c4"
            >
              <div>
                20 条/页
              </div>
              <i
                class="c5 uc-fe-icon icon__down c1"
                type="down"
              />
            </div>
          </div>
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Pagination demo -- pageSizeOptions 1`] = `
.c1 {
  vertical-align: baseline;
}

.c4 {
  border-radius: 2px;
  cursor: pointer;
  padding: 0 8px;
  padding-right: 40px;
  box-sizing: border-box;
}

.c5 {
  position: absolute;
  right: 8px;
  top: 50%;
  margin-top: -6px;
}

.c2 {
  box-sizing: border-box;
  position: relative;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  font-size: 12px;
  color: #6b798e;
  background-color: #fff;
}

.c2 .c3 {
  height: 28px;
  line-height: 28px;
  border: 1px solid #c3cad9;
}

.c2 .c3:hover {
  border-color: #4683e6;
}

.c0 {
  color: #6b798e;
  font-size: 12px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  display: inline-block;
  vertical-align: middle;
}

.c0 .uc-fe-pagination-item,
.c0 .uc-fe-pagination-prev,
.c0 .uc-fe-pagination-next,
.c0 .uc-fe-pagination-jump-prev,
.c0 .uc-fe-pagination-jump-next {
  outline: none;
  box-sizing: border-box;
  background-color: #fff;
  text-align: center;
  border-radius: 2px;
  margin-right: 5px;
  cursor: pointer;
  padding: 0 2px;
  display: inline-block;
  vertical-align: middle;
  min-width: 28px;
  height: 28px;
  line-height: 26px;
}

.c0 .uc-fe-pagination-item,
.c0 .uc-fe-pagination-prev,
.c0 .uc-fe-pagination-next {
  border: 1px solid #c3cad9;
}

.c0 .uc-fe-pagination-item:hover,
.c0 .uc-fe-pagination-prev:hover,
.c0 .uc-fe-pagination-next:hover {
  border-color: #4683e6;
  color: #4074e1;
}

.c0 .uc-fe-pagination-jump-prev:hover,
.c0 .uc-fe-pagination-jump-next:hover {
  color: #4074e1;
}

.c0 .uc-fe-pagination-item-active,
.c0 .uc-fe-pagination-item-active:hover {
  border-color: #4683e6;
  color: #4074e1;
  background-color: #f4f9ff;
  cursor: default;
}

.c0 .uc-fe-pagination-disabled,
.c0 .uc-fe-pagination-disabled:hover {
  border-color: #d9d9d9;
  background-color: #f7f7f7;
  cursor: not-allowed;
}

.c0 .uc-fe-pagination-prev-icon,
.c0 .uc-fe-pagination-next-icon {
  cursor: inherit;
}

.c0 .uc-fe-pagination-options,
.c0 .uc-fe-pagination-options-size-changer,
.c0 .uc-fe-pagination-options-quick-jumper {
  display: inline-block;
  vertical-align: middle;
}

.c0 .uc-fe-pagination-options-size-changer {
  margin-right: 5px;
}

.c0 .uc-fe-pagination-options-gobutton {
  margin-left: 5px;
}

<div>
  <div
    class="demo-wrap"
  >
    <ul
      class="uc-fe-pagination uc-fe-pagination-md c0"
      unselectable="unselectable"
    >
      <li
        aria-disabled="true"
        class="uc-fe-pagination-disabled uc-fe-pagination-prev"
        title="上一页"
      >
        <i
          class="uc-fe-pagination-prev-icon uc-fe-icon icon__left c1"
          type="left"
        />
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-1 uc-fe-pagination-item-active"
        tabindex="0"
        title="1"
      >
        <a>
          1
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-2"
        tabindex="0"
        title="2"
      >
        <a>
          2
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-3"
        tabindex="0"
        title="3"
      >
        <a>
          3
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-4"
        tabindex="0"
        title="4"
      >
        <a>
          4
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-5 uc-fe-pagination-item-before-jump-next"
        tabindex="0"
        title="5"
      >
        <a>
          5
        </a>
      </li>
      <li
        class="uc-fe-pagination-jump-next"
        tabindex="0"
        title="向后 5 页"
      >
        <i
          class="uc-fe-pagination-jump-icon uc-fe-icon icon__more-three c1"
          type="more-three"
        />
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-10"
        tabindex="0"
        title="10"
      >
        <a>
          10
        </a>
      </li>
      <li
        aria-disabled="false"
        class=" uc-fe-pagination-next"
        tabindex="0"
        title="下一页"
      >
        <i
          class="uc-fe-pagination-next-icon uc-fe-icon icon__right c1"
          type="right"
        />
      </li>
      <li
        class="uc-fe-pagination-options"
      >
        <div
          class="uc-fe-pagination-options-size-changer c2"
        >
          <div>
            <div
              class="c3 c4"
            >
              <div>
                10 条/页
              </div>
              <i
                class="c5 uc-fe-icon icon__down c1"
                type="down"
              />
            </div>
          </div>
        </div>
      </li>
    </ul>
  </div>
  <div
    class="demo-wrap"
  >
    <ul
      class="uc-fe-pagination uc-fe-pagination-md c0"
      unselectable="unselectable"
    >
      <li
        aria-disabled="true"
        class="uc-fe-pagination-disabled uc-fe-pagination-prev"
        title="上一页"
      >
        <i
          class="uc-fe-pagination-prev-icon uc-fe-icon icon__left c1"
          type="left"
        />
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-1 uc-fe-pagination-item-active"
        tabindex="0"
        title="1"
      >
        <a>
          1
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-2"
        tabindex="0"
        title="2"
      >
        <a>
          2
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-3"
        tabindex="0"
        title="3"
      >
        <a>
          3
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-4"
        tabindex="0"
        title="4"
      >
        <a>
          4
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-5 uc-fe-pagination-item-before-jump-next"
        tabindex="0"
        title="5"
      >
        <a>
          5
        </a>
      </li>
      <li
        class="uc-fe-pagination-jump-next"
        tabindex="0"
        title="向后 5 页"
      >
        <i
          class="uc-fe-pagination-jump-icon uc-fe-icon icon__more-three c1"
          type="more-three"
        />
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-10"
        tabindex="0"
        title="10"
      >
        <a>
          10
        </a>
      </li>
      <li
        aria-disabled="false"
        class=" uc-fe-pagination-next"
        tabindex="0"
        title="下一页"
      >
        <i
          class="uc-fe-pagination-next-icon uc-fe-icon icon__right c1"
          type="right"
        />
      </li>
      <li
        class="uc-fe-pagination-options"
      >
        <div
          class="uc-fe-pagination-options-size-changer c2"
        >
          <div>
            <div
              class="c3 c4"
            >
              <div>
                10 条/页
              </div>
              <i
                class="c5 uc-fe-icon icon__down c1"
                type="down"
              />
            </div>
          </div>
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Pagination demo -- pagination 1`] = `
.c11 {
  vertical-align: baseline;
}

.c27 {
  position: relative;
}

.c29 {
  border: none;
  outline: none;
  padding: 0;
  margin: 0;
  color: inherit;
}

.c25 {
  position: absolute;
  box-sizing: border-box;
  text-align: center;
  border-radius: 2px;
  border-style: solid;
  color: inherit;
  cursor: pointer;
  background: #fff;
  display: inline-block;
  vertical-align: middle;
  border-color: #c3cad9;
}

.c23 {
  position: relative;
  box-sizing: border-box;
  border-radius: 2px;
  display: inline-block;
  vertical-align: middle;
  color: #6b798e;
  height: 28px;
  border: 1px solid #c3cad9;
  padding-right: 22px;
}

.c23 .c28 {
  line-height: 26px;
  display: inline-block;
  vertical-align: middle;
}

.c23 .c28::-webkit-input-placeholder {
  color: #abb4c3;
}

.c23 .c28::-moz-placeholder {
  color: #abb4c3;
}

.c23 .c28:-ms-input-placeholder {
  color: #abb4c3;
}

.c23 .c28::placeholder {
  color: #abb4c3;
}

.c23:hover {
  border-color: #4683e6;
}

.c23 .c28 {
  padding: 0 0 0 8px;
  text-align: left;
  width: 34px;
}

.c23 .c24,
.c23 .c26 {
  right: 0;
  height: 13px;
  line-height: 13px;
  width: 22px;
}

.c23 .c24:hover,
.c23 .c26:hover {
  color: #4074e1;
}

.c23 .c24 {
  border-width: 0 0 0 1px;
  top: 0;
}

.c23 .c26 {
  border-width: 1px 0 0 1px;
  bottom: 0;
}

.c10 {
  margin-right: 8px;
  font-size: 14px;
}

.c8 {
  color: #6b798e;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c12 {
  color: #6b798e;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c12 .c9 {
  color: #4074e1;
}

.c6 {
  position: relative;
  margin-bottom: -8px;
}

.c6 .c7,
.c6 .style__RadioTagWrap-sc-25j3mq-3,
.c6 .style__RadioCardWrap-sc-25j3mq-8 {
  margin-right: 8px;
  margin-bottom: 8px;
}

.c6 .c7:last-child,
.c6 .style__RadioTagWrap-sc-25j3mq-3:last-child,
.c6 .style__RadioCardWrap-sc-25j3mq-8:last-child {
  margin-right: 0;
}

.c6 .c31 {
  margin-right: -1px;
  margin-bottom: 8px;
}

.c6 .c31:first-child {
  border-radius: 2px 0 0 2px;
}

.c6 .c31:last-child {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

.c30 {
  color: #6b798e;
  font-size: 12px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  display: inline-block;
  vertical-align: middle;
}

.c30 .uc-fe-pagination-item,
.c30 .uc-fe-pagination-prev,
.c30 .uc-fe-pagination-next,
.c30 .uc-fe-pagination-jump-prev,
.c30 .uc-fe-pagination-jump-next {
  outline: none;
  box-sizing: border-box;
  background-color: #fff;
  text-align: center;
  border-radius: 2px;
  margin-right: 5px;
  cursor: pointer;
  padding: 0 2px;
  display: inline-block;
  vertical-align: middle;
  min-width: 28px;
  height: 28px;
  line-height: 26px;
}

.c30 .uc-fe-pagination-item,
.c30 .uc-fe-pagination-prev,
.c30 .uc-fe-pagination-next {
  border: 1px solid #c3cad9;
}

.c30 .uc-fe-pagination-item:hover,
.c30 .uc-fe-pagination-prev:hover,
.c30 .uc-fe-pagination-next:hover {
  border-color: #4683e6;
  color: #4074e1;
}

.c30 .uc-fe-pagination-jump-prev:hover,
.c30 .uc-fe-pagination-jump-next:hover {
  color: #4074e1;
}

.c30 .uc-fe-pagination-item-active,
.c30 .uc-fe-pagination-item-active:hover {
  border-color: #4683e6;
  color: #4074e1;
  background-color: #f4f9ff;
  cursor: default;
}

.c30 .uc-fe-pagination-disabled,
.c30 .uc-fe-pagination-disabled:hover {
  border-color: #d9d9d9;
  background-color: #f7f7f7;
  cursor: not-allowed;
}

.c30 .uc-fe-pagination-prev-icon,
.c30 .uc-fe-pagination-next-icon {
  cursor: inherit;
}

.c30 .uc-fe-pagination-options,
.c30 .uc-fe-pagination-options-size-changer,
.c30 .uc-fe-pagination-options-quick-jumper {
  display: inline-block;
  vertical-align: middle;
}

.c30 .uc-fe-pagination-options-size-changer {
  margin-right: 5px;
}

.c30 .uc-fe-pagination-options-gobutton {
  margin-left: 5px;
}

.c15 {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.c17 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.c20 {
  position: absolute;
  display: inline-block;
  left: -1px;
  top: -2px;
  border-radius: 2px;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c22 {
  position: absolute;
  display: inline-block;
  left: 18px;
  top: 4px;
  width: 2px;
  height: 16px;
  border-radius: 1px;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c13 {
  position: relative;
  border-radius: 2px;
  overflow: hidden;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #fff;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  border-width: 1px;
  line-height: 16px;
}

.c13:hover {
  border-color: #4683e6;
}

.c13 .c19 {
  background-color: #fff;
  box-shadow: 0 0.5px 0.5px #c3cad9;
  border: 1px solid #c3cad9;
  width: 20px;
  height: 20px;
}

.c13 .c21 {
  background-color: #e69b9b;
  left: 13px;
  height: 10px;
}

.c13 .c14 {
  border: 1px solid #c3cad9;
  background-color: #ebedf0;
  color: #6b798e;
}

.c13 .c16,
.c13 .c18 {
  line-height: 16px;
}

.c13 .c16 {
  padding-right: 20px;
}

.c13 .c18 {
  padding-left: 20px;
}

.c13 .c16 {
  display: none;
}

.c4 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
}

.c5 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 83.33333333%;
}

.c1 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.c1:before,
.c1:after {
  content: ' ';
  display: table;
}

.c1:after {
  clear: both;
}

.c1 .c3 {
  padding-left: 8px;
  padding-right: 8px;
}

.c0 {
  margin-bottom: 16px;
}

.c0:last-child {
  margin-bottom: 0;
}

.c2 {
  padding-top: 5px;
  line-height: 1.5;
  word-break: break-all;
}

<div>
  <form
    class="demo-form uc-fe-form "
  >
    <div
      class="uc-fe-form-item c0 uc-fe-row c1"
    >
      <div
        class="uc-fe-form-label c2 c3 uc-fe-col c4"
        span="2"
      >
        size
      </div>
      <div
        class="uc-fe-form-controller c3 uc-fe-col c5"
        span="10"
      >
        <div
          class="c6"
        >
          <div
            class="c7 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c8"
          >
            <i
              class="c9 c10 uc-fe-icon icon__circle c11"
              type="circle"
            />
            sm
          </div>
          <div
            checked=""
            class="c7 uc-fe-radio uc-fe-radio-checked uc-fe-radio-size-md uc-fe-radio-styletype-default c12"
          >
            <i
              class="c9 c10 uc-fe-icon icon__cbox-ed c11"
              type="cbox-ed"
            />
            md
          </div>
          <div
            class="c7 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c8"
          >
            <i
              class="c9 c10 uc-fe-icon icon__circle c11"
              type="circle"
            />
            lg
          </div>
        </div>
      </div>
    </div>
    <div
      class="uc-fe-form-item c0 uc-fe-row c1"
    >
      <div
        class="uc-fe-form-label c2 c3 uc-fe-col c4"
        span="2"
      >
        showTitle
      </div>
      <div
        class="uc-fe-form-controller c3 uc-fe-col c5"
        span="10"
      >
        <div
          class="c13"
        >
          <div
            class="c14 c15"
          >
            <span
              class="c16 c17"
            >
              ON
            </span>
            <span
              class="c18 c17"
            >
              OFF
            </span>
            <span
              class="c19 c20"
            >
              <span
                class="c21 c22"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="uc-fe-form-item c0 uc-fe-row c1"
    >
      <div
        class="uc-fe-form-label c2 c3 uc-fe-col c4"
        span="2"
      >
        showQuickJumper
      </div>
      <div
        class="uc-fe-form-controller c3 uc-fe-col c5"
        span="10"
      >
        <div
          class="c13"
        >
          <div
            class="c14 c15"
          >
            <span
              class="c16 c17"
            >
              ON
            </span>
            <span
              class="c18 c17"
            >
              OFF
            </span>
            <span
              class="c19 c20"
            >
              <span
                class="c21 c22"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="uc-fe-form-item c0 uc-fe-row c1"
    >
      <div
        class="uc-fe-form-label c2 c3 uc-fe-col c4"
        span="2"
      >
        goButton
      </div>
      <div
        class="uc-fe-form-controller c3 uc-fe-col c5"
        span="10"
      >
        <div
          class="c13"
        >
          <div
            class="c14 c15"
          >
            <span
              class="c16 c17"
            >
              ON
            </span>
            <span
              class="c18 c17"
            >
              OFF
            </span>
            <span
              class="c19 c20"
            >
              <span
                class="c21 c22"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="uc-fe-form-item c0 uc-fe-row c1"
    >
      <div
        class="uc-fe-form-label c2 c3 uc-fe-col c4"
        span="2"
      >
        showSizeChanger
      </div>
      <div
        class="uc-fe-form-controller c3 uc-fe-col c5"
        span="10"
      >
        <div
          class="c13"
        >
          <div
            class="c14 c15"
          >
            <span
              class="c16 c17"
            >
              ON
            </span>
            <span
              class="c18 c17"
            >
              OFF
            </span>
            <span
              class="c19 c20"
            >
              <span
                class="c21 c22"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="uc-fe-form-item c0 uc-fe-row c1"
    >
      <div
        class="uc-fe-form-label c2 c3 uc-fe-col c4"
        span="2"
      >
        showPrevNextJumpers
      </div>
      <div
        class="uc-fe-form-controller c3 uc-fe-col c5"
        span="10"
      >
        <div
          class="c13"
        >
          <div
            class="c14 c15"
          >
            <span
              class="c16 c17"
            >
              ON
            </span>
            <span
              class="c18 c17"
            >
              OFF
            </span>
            <span
              class="c19 c20"
            >
              <span
                class="c21 c22"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="uc-fe-form-item c0 uc-fe-row c1"
    >
      <div
        class="uc-fe-form-label c2 c3 uc-fe-col c4"
        span="2"
      >
        simple
      </div>
      <div
        class="uc-fe-form-controller c3 uc-fe-col c5"
        span="10"
      >
        <div
          class="c13"
        >
          <div
            class="c14 c15"
          >
            <span
              class="c16 c17"
            >
              ON
            </span>
            <span
              class="c18 c17"
            >
              OFF
            </span>
            <span
              class="c19 c20"
            >
              <span
                class="c21 c22"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="uc-fe-form-item c0 uc-fe-row c1"
    >
      <div
        class="uc-fe-form-label c2 c3 uc-fe-col c4"
        span="2"
      >
        total
      </div>
      <div
        class="uc-fe-form-controller c3 uc-fe-col c5"
        span="10"
      >
        <div
          class="uc-fe-numberinput uc-fe-numberinput-styletype-default c23"
        >
          <div>
            <span
              class="c24 uc-fe-numberinput-handler-up uc-fe-numberinput-handler c25"
              unselectable="unselectable"
            >
              <i
                class="uc-fe-icon icon__caret-up c11"
                type="caret-up"
              />
            </span>
            <span
              class="c26 uc-fe-numberinput-handler-down uc-fe-numberinput-handler c25"
              unselectable="unselectable"
            >
              <i
                class="uc-fe-icon icon__caret-down c11"
                type="caret-down"
              />
            </span>
          </div>
          <div
            class="uc-fe-numberinput-input-wrap c27"
          >
            <input
              autocomplete="off"
              class="c28 uc-fe-numberinput-input c29"
              min="-9007199254740991"
              step="1"
              value="100"
            />
          </div>
        </div>
      </div>
    </div>
  </form>
  <div
    class="demo-wrap"
  >
    <ul
      class="uc-fe-pagination uc-fe-pagination-md c30"
      unselectable="unselectable"
    >
      <li
        aria-disabled="true"
        class="uc-fe-pagination-disabled uc-fe-pagination-prev"
      >
        <i
          class="uc-fe-pagination-prev-icon uc-fe-icon icon__left c11"
          type="left"
        />
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-1 uc-fe-pagination-item-active"
        tabindex="0"
      >
        <a>
          1
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-2"
        tabindex="0"
      >
        <a>
          2
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-3"
        tabindex="0"
      >
        <a>
          3
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-4"
        tabindex="0"
      >
        <a>
          4
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-5 uc-fe-pagination-item-before-jump-next"
        tabindex="0"
      >
        <a>
          5
        </a>
      </li>
      <li
        aria-disabled="false"
        class=" uc-fe-pagination-next"
        tabindex="0"
      >
        <i
          class="uc-fe-pagination-next-icon uc-fe-icon icon__right c11"
          type="right"
        />
      </li>
    </ul>
  </div>
</div>
`;

exports[`Pagination demo -- showLessItems 1`] = `
.c1 {
  vertical-align: baseline;
}

.c0 {
  color: #6b798e;
  font-size: 12px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  display: inline-block;
  vertical-align: middle;
}

.c0 .uc-fe-pagination-item,
.c0 .uc-fe-pagination-prev,
.c0 .uc-fe-pagination-next,
.c0 .uc-fe-pagination-jump-prev,
.c0 .uc-fe-pagination-jump-next {
  outline: none;
  box-sizing: border-box;
  background-color: #fff;
  text-align: center;
  border-radius: 2px;
  margin-right: 5px;
  cursor: pointer;
  padding: 0 2px;
  display: inline-block;
  vertical-align: middle;
  min-width: 28px;
  height: 28px;
  line-height: 26px;
}

.c0 .uc-fe-pagination-item,
.c0 .uc-fe-pagination-prev,
.c0 .uc-fe-pagination-next {
  border: 1px solid #c3cad9;
}

.c0 .uc-fe-pagination-item:hover,
.c0 .uc-fe-pagination-prev:hover,
.c0 .uc-fe-pagination-next:hover {
  border-color: #4683e6;
  color: #4074e1;
}

.c0 .uc-fe-pagination-jump-prev:hover,
.c0 .uc-fe-pagination-jump-next:hover {
  color: #4074e1;
}

.c0 .uc-fe-pagination-item-active,
.c0 .uc-fe-pagination-item-active:hover {
  border-color: #4683e6;
  color: #4074e1;
  background-color: #f4f9ff;
  cursor: default;
}

.c0 .uc-fe-pagination-disabled,
.c0 .uc-fe-pagination-disabled:hover {
  border-color: #d9d9d9;
  background-color: #f7f7f7;
  cursor: not-allowed;
}

.c0 .uc-fe-pagination-prev-icon,
.c0 .uc-fe-pagination-next-icon {
  cursor: inherit;
}

.c0 .uc-fe-pagination-options,
.c0 .uc-fe-pagination-options-size-changer,
.c0 .uc-fe-pagination-options-quick-jumper {
  display: inline-block;
  vertical-align: middle;
}

.c0 .uc-fe-pagination-options-size-changer {
  margin-right: 5px;
}

.c0 .uc-fe-pagination-options-gobutton {
  margin-left: 5px;
}

<div>
  <div
    class="demo-wrap"
  >
    <ul
      class="uc-fe-pagination uc-fe-pagination-md c0"
      unselectable="unselectable"
    >
      <li
        aria-disabled="true"
        class="uc-fe-pagination-disabled uc-fe-pagination-prev"
        title="上一页"
      >
        <i
          class="uc-fe-pagination-prev-icon uc-fe-icon icon__left c1"
          type="left"
        />
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-1 uc-fe-pagination-item-active"
        tabindex="0"
        title="1"
      >
        <a>
          1
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-2"
        tabindex="0"
        title="2"
      >
        <a>
          2
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-3"
        tabindex="0"
        title="3"
      >
        <a>
          3
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-4"
        tabindex="0"
        title="4"
      >
        <a>
          4
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-5 uc-fe-pagination-item-before-jump-next"
        tabindex="0"
        title="5"
      >
        <a>
          5
        </a>
      </li>
      <li
        class="uc-fe-pagination-jump-next"
        tabindex="0"
        title="向后 5 页"
      >
        <i
          class="uc-fe-pagination-jump-icon uc-fe-icon icon__more-three c1"
          type="more-three"
        />
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-10"
        tabindex="0"
        title="10"
      >
        <a>
          10
        </a>
      </li>
      <li
        aria-disabled="false"
        class=" uc-fe-pagination-next"
        tabindex="0"
        title="下一页"
      >
        <i
          class="uc-fe-pagination-next-icon uc-fe-icon icon__right c1"
          type="right"
        />
      </li>
    </ul>
  </div>
  <div
    class="demo-wrap"
  >
    <ul
      class="uc-fe-pagination uc-fe-pagination-md c0"
      unselectable="unselectable"
    >
      <li
        aria-disabled="true"
        class="uc-fe-pagination-disabled uc-fe-pagination-prev"
        title="上一页"
      >
        <i
          class="uc-fe-pagination-prev-icon uc-fe-icon icon__left c1"
          type="left"
        />
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-1 uc-fe-pagination-item-active"
        tabindex="0"
        title="1"
      >
        <a>
          1
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-2"
        tabindex="0"
        title="2"
      >
        <a>
          2
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-3 uc-fe-pagination-item-before-jump-next"
        tabindex="0"
        title="3"
      >
        <a>
          3
        </a>
      </li>
      <li
        class="uc-fe-pagination-jump-next"
        tabindex="0"
        title="向后 3 页"
      >
        <i
          class="uc-fe-pagination-jump-icon uc-fe-icon icon__more-three c1"
          type="more-three"
        />
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-10"
        tabindex="0"
        title="10"
      >
        <a>
          10
        </a>
      </li>
      <li
        aria-disabled="false"
        class=" uc-fe-pagination-next"
        tabindex="0"
        title="下一页"
      >
        <i
          class="uc-fe-pagination-next-icon uc-fe-icon icon__right c1"
          type="right"
        />
      </li>
    </ul>
  </div>
</div>
`;

exports[`Pagination demo -- showPrevNextJumpers 1`] = `
.c1 {
  vertical-align: baseline;
}

.c0 {
  color: #6b798e;
  font-size: 12px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  display: inline-block;
  vertical-align: middle;
}

.c0 .uc-fe-pagination-item,
.c0 .uc-fe-pagination-prev,
.c0 .uc-fe-pagination-next,
.c0 .uc-fe-pagination-jump-prev,
.c0 .uc-fe-pagination-jump-next {
  outline: none;
  box-sizing: border-box;
  background-color: #fff;
  text-align: center;
  border-radius: 2px;
  margin-right: 5px;
  cursor: pointer;
  padding: 0 2px;
  display: inline-block;
  vertical-align: middle;
  min-width: 28px;
  height: 28px;
  line-height: 26px;
}

.c0 .uc-fe-pagination-item,
.c0 .uc-fe-pagination-prev,
.c0 .uc-fe-pagination-next {
  border: 1px solid #c3cad9;
}

.c0 .uc-fe-pagination-item:hover,
.c0 .uc-fe-pagination-prev:hover,
.c0 .uc-fe-pagination-next:hover {
  border-color: #4683e6;
  color: #4074e1;
}

.c0 .uc-fe-pagination-jump-prev:hover,
.c0 .uc-fe-pagination-jump-next:hover {
  color: #4074e1;
}

.c0 .uc-fe-pagination-item-active,
.c0 .uc-fe-pagination-item-active:hover {
  border-color: #4683e6;
  color: #4074e1;
  background-color: #f4f9ff;
  cursor: default;
}

.c0 .uc-fe-pagination-disabled,
.c0 .uc-fe-pagination-disabled:hover {
  border-color: #d9d9d9;
  background-color: #f7f7f7;
  cursor: not-allowed;
}

.c0 .uc-fe-pagination-prev-icon,
.c0 .uc-fe-pagination-next-icon {
  cursor: inherit;
}

.c0 .uc-fe-pagination-options,
.c0 .uc-fe-pagination-options-size-changer,
.c0 .uc-fe-pagination-options-quick-jumper {
  display: inline-block;
  vertical-align: middle;
}

.c0 .uc-fe-pagination-options-size-changer {
  margin-right: 5px;
}

.c0 .uc-fe-pagination-options-gobutton {
  margin-left: 5px;
}

<div>
  <div
    class="demo-wrap"
  >
    <ul
      class="uc-fe-pagination uc-fe-pagination-md c0"
      unselectable="unselectable"
    >
      <li
        aria-disabled="true"
        class="uc-fe-pagination-disabled uc-fe-pagination-prev"
        title="上一页"
      >
        <i
          class="uc-fe-pagination-prev-icon uc-fe-icon icon__left c1"
          type="left"
        />
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-1 uc-fe-pagination-item-active"
        tabindex="0"
        title="1"
      >
        <a>
          1
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-2"
        tabindex="0"
        title="2"
      >
        <a>
          2
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-3"
        tabindex="0"
        title="3"
      >
        <a>
          3
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-4"
        tabindex="0"
        title="4"
      >
        <a>
          4
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-5 uc-fe-pagination-item-before-jump-next"
        tabindex="0"
        title="5"
      >
        <a>
          5
        </a>
      </li>
      <li
        class="uc-fe-pagination-jump-next"
        tabindex="0"
        title="向后 5 页"
      >
        <i
          class="uc-fe-pagination-jump-icon uc-fe-icon icon__more-three c1"
          type="more-three"
        />
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-10"
        tabindex="0"
        title="10"
      >
        <a>
          10
        </a>
      </li>
      <li
        aria-disabled="false"
        class=" uc-fe-pagination-next"
        tabindex="0"
        title="下一页"
      >
        <i
          class="uc-fe-pagination-next-icon uc-fe-icon icon__right c1"
          type="right"
        />
      </li>
    </ul>
  </div>
  <div
    class="demo-wrap"
  >
    <ul
      class="uc-fe-pagination uc-fe-pagination-md c0"
      unselectable="unselectable"
    >
      <li
        aria-disabled="true"
        class="uc-fe-pagination-disabled uc-fe-pagination-prev"
        title="上一页"
      >
        <i
          class="uc-fe-pagination-prev-icon uc-fe-icon icon__left c1"
          type="left"
        />
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-1 uc-fe-pagination-item-active"
        tabindex="0"
        title="1"
      >
        <a>
          1
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-2"
        tabindex="0"
        title="2"
      >
        <a>
          2
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-3"
        tabindex="0"
        title="3"
      >
        <a>
          3
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-4"
        tabindex="0"
        title="4"
      >
        <a>
          4
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-5 uc-fe-pagination-item-before-jump-next"
        tabindex="0"
        title="5"
      >
        <a>
          5
        </a>
      </li>
      <li
        aria-disabled="false"
        class=" uc-fe-pagination-next"
        tabindex="0"
        title="下一页"
      >
        <i
          class="uc-fe-pagination-next-icon uc-fe-icon icon__right c1"
          type="right"
        />
      </li>
    </ul>
  </div>
</div>
`;

exports[`Pagination demo -- showQuickJumper 1`] = `
.c1 {
  vertical-align: baseline;
}

.c3 {
  position: relative;
}

.c5 {
  border: none;
  outline: none;
  padding: 0;
  margin: 0;
  color: inherit;
}

.c7 {
  color: #c3cad9;
  margin: 0 4px;
  display: inline-block;
  vertical-align: middle;
}

.c9 .c4 {
  line-height: 26px;
  display: inline-block;
  vertical-align: middle;
}

.c9 .c4::-webkit-input-placeholder {
  color: #abb4c3;
}

.c9 .c4::-moz-placeholder {
  color: #abb4c3;
}

.c9 .c4:-ms-input-placeholder {
  color: #abb4c3;
}

.c9 .c4::placeholder {
  color: #abb4c3;
}

.c9 .c4 {
  padding: 0 0 0 8px;
  text-align: left;
  width: 34px;
}

.c2 {
  position: relative;
  box-sizing: border-box;
  border-radius: 2px;
  display: inline-block;
  vertical-align: middle;
  color: #6b798e;
  height: 28px;
  padding: 0 28px;
  padding: 0;
  margin: 0;
}

.c2 .c4 {
  line-height: 26px;
  display: inline-block;
  vertical-align: middle;
}

.c2 .c4::-webkit-input-placeholder {
  color: #abb4c3;
}

.c2 .c4::-moz-placeholder {
  color: #abb4c3;
}

.c2 .c4:-ms-input-placeholder {
  color: #abb4c3;
}

.c2 .c4::placeholder {
  color: #abb4c3;
}

.c2 .c4 {
  text-align: center;
  border: 1px solid #c3cad9;
  margin: 0 4px;
  height: 26px;
  width: 26px;
}

.c2 .c4:hover {
  border-color: #4683e6;
  z-index: 1;
}

.c2 .c10,
.c2 .c11 {
  text-align: center;
  top: 0;
  height: 28px;
  width: 28px;
  line-height: 26px;
}

.c2 .c10:hover,
.c2 .c11:hover {
  color: #4074e1;
  border-color: #4683e6;
  z-index: 1;
}

.c2 .c10 {
  right: 0;
  border-width: 1px;
}

.c2 .c11 {
  left: 0;
  border-width: 1px;
}

.c2 .c6 {
  margin-left: 0;
}

.c2 .c4 {
  margin: 0;
}

.c2 .c6 {
  margin-left: 4px;
  margin-right: 0px;
}

.c8 {
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #fff;
  background: #4683e6;
  border-color: #4683e6;
}

.c8:hover {
  color: #fff;
  background: #3664c8;
  border-color: #3664c8;
}

.c0 {
  color: #6b798e;
  font-size: 12px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  display: inline-block;
  vertical-align: middle;
}

.c0 .uc-fe-pagination-item,
.c0 .uc-fe-pagination-prev,
.c0 .uc-fe-pagination-next,
.c0 .uc-fe-pagination-jump-prev,
.c0 .uc-fe-pagination-jump-next {
  outline: none;
  box-sizing: border-box;
  background-color: #fff;
  text-align: center;
  border-radius: 2px;
  margin-right: 5px;
  cursor: pointer;
  padding: 0 2px;
  display: inline-block;
  vertical-align: middle;
  min-width: 28px;
  height: 28px;
  line-height: 26px;
}

.c0 .uc-fe-pagination-item,
.c0 .uc-fe-pagination-prev,
.c0 .uc-fe-pagination-next {
  border: 1px solid #c3cad9;
}

.c0 .uc-fe-pagination-item:hover,
.c0 .uc-fe-pagination-prev:hover,
.c0 .uc-fe-pagination-next:hover {
  border-color: #4683e6;
  color: #4074e1;
}

.c0 .uc-fe-pagination-jump-prev:hover,
.c0 .uc-fe-pagination-jump-next:hover {
  color: #4074e1;
}

.c0 .uc-fe-pagination-item-active,
.c0 .uc-fe-pagination-item-active:hover {
  border-color: #4683e6;
  color: #4074e1;
  background-color: #f4f9ff;
  cursor: default;
}

.c0 .uc-fe-pagination-disabled,
.c0 .uc-fe-pagination-disabled:hover {
  border-color: #d9d9d9;
  background-color: #f7f7f7;
  cursor: not-allowed;
}

.c0 .uc-fe-pagination-prev-icon,
.c0 .uc-fe-pagination-next-icon {
  cursor: inherit;
}

.c0 .uc-fe-pagination-options,
.c0 .uc-fe-pagination-options-size-changer,
.c0 .uc-fe-pagination-options-quick-jumper {
  display: inline-block;
  vertical-align: middle;
}

.c0 .uc-fe-pagination-options-size-changer {
  margin-right: 5px;
}

.c0 .uc-fe-pagination-options-gobutton {
  margin-left: 5px;
}

<div>
  <div
    class="demo-wrap"
  >
    <ul
      class="uc-fe-pagination uc-fe-pagination-md c0"
      unselectable="unselectable"
    >
      <li
        aria-disabled="true"
        class="uc-fe-pagination-disabled uc-fe-pagination-prev"
        title="上一页"
      >
        <i
          class="uc-fe-pagination-prev-icon uc-fe-icon icon__left c1"
          type="left"
        />
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-1 uc-fe-pagination-item-active"
        tabindex="0"
        title="1"
      >
        <a>
          1
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-2"
        tabindex="0"
        title="2"
      >
        <a>
          2
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-3"
        tabindex="0"
        title="3"
      >
        <a>
          3
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-4"
        tabindex="0"
        title="4"
      >
        <a>
          4
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-5 uc-fe-pagination-item-before-jump-next"
        tabindex="0"
        title="5"
      >
        <a>
          5
        </a>
      </li>
      <li
        class="uc-fe-pagination-jump-next"
        tabindex="0"
        title="向后 5 页"
      >
        <i
          class="uc-fe-pagination-jump-icon uc-fe-icon icon__more-three c1"
          type="more-three"
        />
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-10"
        tabindex="0"
        title="10"
      >
        <a>
          10
        </a>
      </li>
      <li
        aria-disabled="false"
        class=" uc-fe-pagination-next"
        tabindex="0"
        title="下一页"
      >
        <i
          class="uc-fe-pagination-next-icon uc-fe-icon icon__right c1"
          type="right"
        />
      </li>
    </ul>
  </div>
  <div
    class="demo-wrap"
  >
    <ul
      class="uc-fe-pagination uc-fe-pagination-md c0"
      unselectable="unselectable"
    >
      <li
        aria-disabled="true"
        class="uc-fe-pagination-disabled uc-fe-pagination-prev"
        title="上一页"
      >
        <i
          class="uc-fe-pagination-prev-icon uc-fe-icon icon__left c1"
          type="left"
        />
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-1 uc-fe-pagination-item-active"
        tabindex="0"
        title="1"
      >
        <a>
          1
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-2"
        tabindex="0"
        title="2"
      >
        <a>
          2
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-3"
        tabindex="0"
        title="3"
      >
        <a>
          3
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-4"
        tabindex="0"
        title="4"
      >
        <a>
          4
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-5 uc-fe-pagination-item-before-jump-next"
        tabindex="0"
        title="5"
      >
        <a>
          5
        </a>
      </li>
      <li
        class="uc-fe-pagination-jump-next"
        tabindex="0"
        title="向后 5 页"
      >
        <i
          class="uc-fe-pagination-jump-icon uc-fe-icon icon__more-three c1"
          type="more-three"
        />
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-10"
        tabindex="0"
        title="10"
      >
        <a>
          10
        </a>
      </li>
      <li
        aria-disabled="false"
        class=" uc-fe-pagination-next"
        tabindex="0"
        title="下一页"
      >
        <i
          class="uc-fe-pagination-next-icon uc-fe-icon icon__right c1"
          type="right"
        />
      </li>
      <li
        class="uc-fe-pagination-options"
      >
        <div
          class="uc-fe-pagination-options-quick-jumper"
        >
          <div
            class="uc-fe-numberinput uc-fe-numberinput-styletype-pagination c2"
          >
            <div
              class="uc-fe-numberinput-input-wrap c3"
            >
              <input
                autocomplete="off"
                class="c4 uc-fe-numberinput-input c5"
                max="10"
                min="1"
                step="1"
                value=""
              />
              <span
                class="c6 uc-fe-numberinput-suffix c7"
              >
                <span
                  class="uc-fe-pagination-options-quick-jumper-text"
                >
                  /10
                </span>
              </span>
            </div>
          </div>
        </div>
      </li>
    </ul>
  </div>
  <div
    class="demo-wrap"
  >
    <ul
      class="uc-fe-pagination uc-fe-pagination-md c0"
      unselectable="unselectable"
    >
      <li
        aria-disabled="true"
        class="uc-fe-pagination-disabled uc-fe-pagination-prev"
        title="上一页"
      >
        <i
          class="uc-fe-pagination-prev-icon uc-fe-icon icon__left c1"
          type="left"
        />
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-1 uc-fe-pagination-item-active"
        tabindex="0"
        title="1"
      >
        <a>
          1
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-2"
        tabindex="0"
        title="2"
      >
        <a>
          2
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-3"
        tabindex="0"
        title="3"
      >
        <a>
          3
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-4"
        tabindex="0"
        title="4"
      >
        <a>
          4
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-5 uc-fe-pagination-item-before-jump-next"
        tabindex="0"
        title="5"
      >
        <a>
          5
        </a>
      </li>
      <li
        class="uc-fe-pagination-jump-next"
        tabindex="0"
        title="向后 5 页"
      >
        <i
          class="uc-fe-pagination-jump-icon uc-fe-icon icon__more-three c1"
          type="more-three"
        />
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-10"
        tabindex="0"
        title="10"
      >
        <a>
          10
        </a>
      </li>
      <li
        aria-disabled="false"
        class=" uc-fe-pagination-next"
        tabindex="0"
        title="下一页"
      >
        <i
          class="uc-fe-pagination-next-icon uc-fe-icon icon__right c1"
          type="right"
        />
      </li>
      <li
        class="uc-fe-pagination-options"
      >
        <div
          class="uc-fe-pagination-options-quick-jumper"
        >
          <div
            class="uc-fe-numberinput uc-fe-numberinput-styletype-pagination c2"
          >
            <div
              class="uc-fe-numberinput-input-wrap c3"
            >
              <input
                autocomplete="off"
                class="c4 uc-fe-numberinput-input c5"
                max="10"
                min="1"
                step="1"
                value=""
              />
              <span
                class="c6 uc-fe-numberinput-suffix c7"
              >
                <span
                  class="uc-fe-pagination-options-quick-jumper-text"
                >
                  /10
                </span>
              </span>
            </div>
          </div>
          <button
            class="uc-fe-pagination-options-gobutton uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-primary c8"
            type="button"
          >
            确定
          </button>
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Pagination demo -- showSizeChanger 1`] = `
.c1 {
  vertical-align: baseline;
}

.c4 {
  border-radius: 2px;
  cursor: pointer;
  padding: 0 8px;
  padding-right: 40px;
  box-sizing: border-box;
}

.c5 {
  position: absolute;
  right: 8px;
  top: 50%;
  margin-top: -6px;
}

.c2 {
  box-sizing: border-box;
  position: relative;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  font-size: 12px;
  color: #6b798e;
  background-color: #fff;
}

.c2 .c3 {
  height: 28px;
  line-height: 28px;
  border: 1px solid #c3cad9;
}

.c2 .c3:hover {
  border-color: #4683e6;
}

.c0 {
  color: #6b798e;
  font-size: 12px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  display: inline-block;
  vertical-align: middle;
}

.c0 .uc-fe-pagination-item,
.c0 .uc-fe-pagination-prev,
.c0 .uc-fe-pagination-next,
.c0 .uc-fe-pagination-jump-prev,
.c0 .uc-fe-pagination-jump-next {
  outline: none;
  box-sizing: border-box;
  background-color: #fff;
  text-align: center;
  border-radius: 2px;
  margin-right: 5px;
  cursor: pointer;
  padding: 0 2px;
  display: inline-block;
  vertical-align: middle;
  min-width: 28px;
  height: 28px;
  line-height: 26px;
}

.c0 .uc-fe-pagination-item,
.c0 .uc-fe-pagination-prev,
.c0 .uc-fe-pagination-next {
  border: 1px solid #c3cad9;
}

.c0 .uc-fe-pagination-item:hover,
.c0 .uc-fe-pagination-prev:hover,
.c0 .uc-fe-pagination-next:hover {
  border-color: #4683e6;
  color: #4074e1;
}

.c0 .uc-fe-pagination-jump-prev:hover,
.c0 .uc-fe-pagination-jump-next:hover {
  color: #4074e1;
}

.c0 .uc-fe-pagination-item-active,
.c0 .uc-fe-pagination-item-active:hover {
  border-color: #4683e6;
  color: #4074e1;
  background-color: #f4f9ff;
  cursor: default;
}

.c0 .uc-fe-pagination-disabled,
.c0 .uc-fe-pagination-disabled:hover {
  border-color: #d9d9d9;
  background-color: #f7f7f7;
  cursor: not-allowed;
}

.c0 .uc-fe-pagination-prev-icon,
.c0 .uc-fe-pagination-next-icon {
  cursor: inherit;
}

.c0 .uc-fe-pagination-options,
.c0 .uc-fe-pagination-options-size-changer,
.c0 .uc-fe-pagination-options-quick-jumper {
  display: inline-block;
  vertical-align: middle;
}

.c0 .uc-fe-pagination-options-size-changer {
  margin-right: 5px;
}

.c0 .uc-fe-pagination-options-gobutton {
  margin-left: 5px;
}

<div>
  <div
    class="demo-wrap"
  >
    <ul
      class="uc-fe-pagination uc-fe-pagination-md c0"
      unselectable="unselectable"
    >
      <li
        aria-disabled="true"
        class="uc-fe-pagination-disabled uc-fe-pagination-prev"
        title="上一页"
      >
        <i
          class="uc-fe-pagination-prev-icon uc-fe-icon icon__left c1"
          type="left"
        />
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-1 uc-fe-pagination-item-active"
        tabindex="0"
        title="1"
      >
        <a>
          1
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-2"
        tabindex="0"
        title="2"
      >
        <a>
          2
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-3"
        tabindex="0"
        title="3"
      >
        <a>
          3
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-4"
        tabindex="0"
        title="4"
      >
        <a>
          4
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-5 uc-fe-pagination-item-before-jump-next"
        tabindex="0"
        title="5"
      >
        <a>
          5
        </a>
      </li>
      <li
        class="uc-fe-pagination-jump-next"
        tabindex="0"
        title="向后 5 页"
      >
        <i
          class="uc-fe-pagination-jump-icon uc-fe-icon icon__more-three c1"
          type="more-three"
        />
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-10"
        tabindex="0"
        title="10"
      >
        <a>
          10
        </a>
      </li>
      <li
        aria-disabled="false"
        class=" uc-fe-pagination-next"
        tabindex="0"
        title="下一页"
      >
        <i
          class="uc-fe-pagination-next-icon uc-fe-icon icon__right c1"
          type="right"
        />
      </li>
    </ul>
  </div>
  <div
    class="demo-wrap"
  >
    <ul
      class="uc-fe-pagination uc-fe-pagination-md c0"
      unselectable="unselectable"
    >
      <li
        aria-disabled="true"
        class="uc-fe-pagination-disabled uc-fe-pagination-prev"
        title="上一页"
      >
        <i
          class="uc-fe-pagination-prev-icon uc-fe-icon icon__left c1"
          type="left"
        />
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-1 uc-fe-pagination-item-active"
        tabindex="0"
        title="1"
      >
        <a>
          1
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-2"
        tabindex="0"
        title="2"
      >
        <a>
          2
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-3"
        tabindex="0"
        title="3"
      >
        <a>
          3
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-4"
        tabindex="0"
        title="4"
      >
        <a>
          4
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-5 uc-fe-pagination-item-before-jump-next"
        tabindex="0"
        title="5"
      >
        <a>
          5
        </a>
      </li>
      <li
        class="uc-fe-pagination-jump-next"
        tabindex="0"
        title="向后 5 页"
      >
        <i
          class="uc-fe-pagination-jump-icon uc-fe-icon icon__more-three c1"
          type="more-three"
        />
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-10"
        tabindex="0"
        title="10"
      >
        <a>
          10
        </a>
      </li>
      <li
        aria-disabled="false"
        class=" uc-fe-pagination-next"
        tabindex="0"
        title="下一页"
      >
        <i
          class="uc-fe-pagination-next-icon uc-fe-icon icon__right c1"
          type="right"
        />
      </li>
      <li
        class="uc-fe-pagination-options"
      >
        <div
          class="uc-fe-pagination-options-size-changer c2"
        >
          <div>
            <div
              class="c3 c4"
            >
              <div>
                10 条/页
              </div>
              <i
                class="c5 uc-fe-icon icon__down c1"
                type="down"
              />
            </div>
          </div>
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Pagination demo -- showTitle 1`] = `
.c1 {
  vertical-align: baseline;
}

.c0 {
  color: #6b798e;
  font-size: 12px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  display: inline-block;
  vertical-align: middle;
}

.c0 .uc-fe-pagination-item,
.c0 .uc-fe-pagination-prev,
.c0 .uc-fe-pagination-next,
.c0 .uc-fe-pagination-jump-prev,
.c0 .uc-fe-pagination-jump-next {
  outline: none;
  box-sizing: border-box;
  background-color: #fff;
  text-align: center;
  border-radius: 2px;
  margin-right: 5px;
  cursor: pointer;
  padding: 0 2px;
  display: inline-block;
  vertical-align: middle;
  min-width: 28px;
  height: 28px;
  line-height: 26px;
}

.c0 .uc-fe-pagination-item,
.c0 .uc-fe-pagination-prev,
.c0 .uc-fe-pagination-next {
  border: 1px solid #c3cad9;
}

.c0 .uc-fe-pagination-item:hover,
.c0 .uc-fe-pagination-prev:hover,
.c0 .uc-fe-pagination-next:hover {
  border-color: #4683e6;
  color: #4074e1;
}

.c0 .uc-fe-pagination-jump-prev:hover,
.c0 .uc-fe-pagination-jump-next:hover {
  color: #4074e1;
}

.c0 .uc-fe-pagination-item-active,
.c0 .uc-fe-pagination-item-active:hover {
  border-color: #4683e6;
  color: #4074e1;
  background-color: #f4f9ff;
  cursor: default;
}

.c0 .uc-fe-pagination-disabled,
.c0 .uc-fe-pagination-disabled:hover {
  border-color: #d9d9d9;
  background-color: #f7f7f7;
  cursor: not-allowed;
}

.c0 .uc-fe-pagination-prev-icon,
.c0 .uc-fe-pagination-next-icon {
  cursor: inherit;
}

.c0 .uc-fe-pagination-options,
.c0 .uc-fe-pagination-options-size-changer,
.c0 .uc-fe-pagination-options-quick-jumper {
  display: inline-block;
  vertical-align: middle;
}

.c0 .uc-fe-pagination-options-size-changer {
  margin-right: 5px;
}

.c0 .uc-fe-pagination-options-gobutton {
  margin-left: 5px;
}

<div>
  <div
    class="demo-wrap"
  >
    <ul
      class="uc-fe-pagination uc-fe-pagination-md c0"
      unselectable="unselectable"
    >
      <li
        aria-disabled="true"
        class="uc-fe-pagination-disabled uc-fe-pagination-prev"
        title="上一页"
      >
        <i
          class="uc-fe-pagination-prev-icon uc-fe-icon icon__left c1"
          type="left"
        />
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-1 uc-fe-pagination-item-active"
        tabindex="0"
        title="1"
      >
        <a>
          1
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-2"
        tabindex="0"
        title="2"
      >
        <a>
          2
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-3"
        tabindex="0"
        title="3"
      >
        <a>
          3
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-4"
        tabindex="0"
        title="4"
      >
        <a>
          4
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-5 uc-fe-pagination-item-before-jump-next"
        tabindex="0"
        title="5"
      >
        <a>
          5
        </a>
      </li>
      <li
        class="uc-fe-pagination-jump-next"
        tabindex="0"
        title="向后 5 页"
      >
        <i
          class="uc-fe-pagination-jump-icon uc-fe-icon icon__more-three c1"
          type="more-three"
        />
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-10"
        tabindex="0"
        title="10"
      >
        <a>
          10
        </a>
      </li>
      <li
        aria-disabled="false"
        class=" uc-fe-pagination-next"
        tabindex="0"
        title="下一页"
      >
        <i
          class="uc-fe-pagination-next-icon uc-fe-icon icon__right c1"
          type="right"
        />
      </li>
    </ul>
  </div>
  <div
    class="demo-wrap"
  >
    <ul
      class="uc-fe-pagination uc-fe-pagination-md c0"
      unselectable="unselectable"
    >
      <li
        aria-disabled="true"
        class="uc-fe-pagination-disabled uc-fe-pagination-prev"
      >
        <i
          class="uc-fe-pagination-prev-icon uc-fe-icon icon__left c1"
          type="left"
        />
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-1 uc-fe-pagination-item-active"
        tabindex="0"
      >
        <a>
          1
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-2"
        tabindex="0"
      >
        <a>
          2
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-3"
        tabindex="0"
      >
        <a>
          3
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-4"
        tabindex="0"
      >
        <a>
          4
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-5 uc-fe-pagination-item-before-jump-next"
        tabindex="0"
      >
        <a>
          5
        </a>
      </li>
      <li
        class="uc-fe-pagination-jump-next"
        tabindex="0"
      >
        <i
          class="uc-fe-pagination-jump-icon uc-fe-icon icon__more-three c1"
          type="more-three"
        />
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-10"
        tabindex="0"
      >
        <a>
          10
        </a>
      </li>
      <li
        aria-disabled="false"
        class=" uc-fe-pagination-next"
        tabindex="0"
      >
        <i
          class="uc-fe-pagination-next-icon uc-fe-icon icon__right c1"
          type="right"
        />
      </li>
    </ul>
  </div>
</div>
`;

exports[`Pagination demo -- simple 1`] = `
.c1 {
  vertical-align: baseline;
}

.c7 {
  position: relative;
}

.c9 {
  border: none;
  outline: none;
  padding: 0;
  margin: 0;
  color: inherit;
}

.c11 {
  color: #c3cad9;
  margin: 0 4px;
  display: inline-block;
  vertical-align: middle;
}

.c4 {
  position: absolute;
  box-sizing: border-box;
  text-align: center;
  border-radius: 2px;
  border-style: solid;
  color: inherit;
  cursor: pointer;
  background: #fff;
  display: inline-block;
  vertical-align: middle;
  border-color: #c3cad9;
}

.c6 {
  position: absolute;
  box-sizing: border-box;
  text-align: center;
  border-radius: 2px;
  border-style: solid;
  color: inherit;
  cursor: pointer;
  background: #fff;
  display: inline-block;
  vertical-align: middle;
  border-color: #c3cad9;
  cursor: not-allowed;
  pointer-events: none;
  color: #bbb;
}

.c12 .c8 {
  line-height: 26px;
  display: inline-block;
  vertical-align: middle;
}

.c12 .c8::-webkit-input-placeholder {
  color: #abb4c3;
}

.c12 .c8::-moz-placeholder {
  color: #abb4c3;
}

.c12 .c8:-ms-input-placeholder {
  color: #abb4c3;
}

.c12 .c8::placeholder {
  color: #abb4c3;
}

.c12 .c8 {
  padding: 0 0 0 8px;
  text-align: left;
  width: 34px;
}

.c12 .c3,
.c12 .c5 {
  right: 0;
  height: 13px;
  line-height: 13px;
  width: 22px;
}

.c12 .c3:hover,
.c12 .c5:hover {
  color: #4074e1;
}

.c12 .c3 {
  border-width: 0 0 0 1px;
  top: 0;
}

.c12 .c5 {
  border-width: 1px 0 0 1px;
  bottom: 0;
}

.c13 .c8 {
  line-height: 26px;
  display: inline-block;
  vertical-align: middle;
}

.c13 .c8::-webkit-input-placeholder {
  color: #abb4c3;
}

.c13 .c8::-moz-placeholder {
  color: #abb4c3;
}

.c13 .c8:-ms-input-placeholder {
  color: #abb4c3;
}

.c13 .c8::placeholder {
  color: #abb4c3;
}

.c13 .c8 {
  text-align: center;
  border: 1px solid #c3cad9;
  margin: 0 4px;
  height: 26px;
  width: 26px;
}

.c13 .c8:hover {
  border-color: #4683e6;
  z-index: 1;
}

.c13 .c3,
.c13 .c5 {
  text-align: center;
  top: 0;
  height: 28px;
  width: 28px;
  line-height: 26px;
}

.c13 .c3:hover,
.c13 .c5:hover {
  color: #4074e1;
  border-color: #4683e6;
  z-index: 1;
}

.c13 .c3 {
  right: 0;
  border-width: 1px;
}

.c13 .c5 {
  left: 0;
  border-width: 1px;
}

.c13 .c10 {
  margin-left: 0;
}

.c13 .c8 {
  margin: 0;
}

.c13 .c10 {
  margin-left: 4px;
  margin-right: 0px;
}

.c2 {
  position: relative;
  box-sizing: border-box;
  border-radius: 2px;
  display: inline-block;
  vertical-align: middle;
  color: #6b798e;
  height: 28px;
  padding: 0 28px;
}

.c2 .c8 {
  line-height: 26px;
  display: inline-block;
  vertical-align: middle;
}

.c2 .c8::-webkit-input-placeholder {
  color: #abb4c3;
}

.c2 .c8::-moz-placeholder {
  color: #abb4c3;
}

.c2 .c8:-ms-input-placeholder {
  color: #abb4c3;
}

.c2 .c8::placeholder {
  color: #abb4c3;
}

.c2 .c8 {
  text-align: center;
  border: 1px solid #c3cad9;
  margin: 0 4px;
  height: 26px;
  width: 26px;
}

.c2 .c8:hover {
  border-color: #4683e6;
  z-index: 1;
}

.c2 .c3,
.c2 .c5 {
  text-align: center;
  top: 0;
  height: 28px;
  width: 28px;
  line-height: 26px;
}

.c2 .c3:hover,
.c2 .c5:hover {
  color: #4074e1;
  border-color: #4683e6;
  z-index: 1;
}

.c2 .c3 {
  right: 0;
  border-width: 1px;
}

.c2 .c5 {
  left: 0;
  border-width: 1px;
}

.c2 .c10 {
  margin-left: 0;
}

.c0 {
  color: #6b798e;
  font-size: 12px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  display: inline-block;
  vertical-align: middle;
}

.c0 .uc-fe-pagination-item,
.c0 .uc-fe-pagination-prev,
.c0 .uc-fe-pagination-next,
.c0 .uc-fe-pagination-jump-prev,
.c0 .uc-fe-pagination-jump-next {
  outline: none;
  box-sizing: border-box;
  background-color: #fff;
  text-align: center;
  border-radius: 2px;
  margin-right: 5px;
  cursor: pointer;
  padding: 0 2px;
  display: inline-block;
  vertical-align: middle;
  min-width: 28px;
  height: 28px;
  line-height: 26px;
}

.c0 .uc-fe-pagination-item,
.c0 .uc-fe-pagination-prev,
.c0 .uc-fe-pagination-next {
  border: 1px solid #c3cad9;
}

.c0 .uc-fe-pagination-item:hover,
.c0 .uc-fe-pagination-prev:hover,
.c0 .uc-fe-pagination-next:hover {
  border-color: #4683e6;
  color: #4074e1;
}

.c0 .uc-fe-pagination-jump-prev:hover,
.c0 .uc-fe-pagination-jump-next:hover {
  color: #4074e1;
}

.c0 .uc-fe-pagination-item-active,
.c0 .uc-fe-pagination-item-active:hover {
  border-color: #4683e6;
  color: #4074e1;
  background-color: #f4f9ff;
  cursor: default;
}

.c0 .uc-fe-pagination-disabled,
.c0 .uc-fe-pagination-disabled:hover {
  border-color: #d9d9d9;
  background-color: #f7f7f7;
  cursor: not-allowed;
}

.c0 .uc-fe-pagination-prev-icon,
.c0 .uc-fe-pagination-next-icon {
  cursor: inherit;
}

.c0 .uc-fe-pagination-options,
.c0 .uc-fe-pagination-options-size-changer,
.c0 .uc-fe-pagination-options-quick-jumper {
  display: inline-block;
  vertical-align: middle;
}

.c0 .uc-fe-pagination-options-size-changer {
  margin-right: 5px;
}

.c0 .uc-fe-pagination-options-gobutton {
  margin-left: 5px;
}

<div>
  <div
    class="demo-wrap"
  >
    <ul
      class="uc-fe-pagination uc-fe-pagination-md c0"
      unselectable="unselectable"
    >
      <li
        aria-disabled="true"
        class="uc-fe-pagination-disabled uc-fe-pagination-prev"
        title="上一页"
      >
        <i
          class="uc-fe-pagination-prev-icon uc-fe-icon icon__left c1"
          type="left"
        />
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-1 uc-fe-pagination-item-active"
        tabindex="0"
        title="1"
      >
        <a>
          1
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-2"
        tabindex="0"
        title="2"
      >
        <a>
          2
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-3"
        tabindex="0"
        title="3"
      >
        <a>
          3
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-4"
        tabindex="0"
        title="4"
      >
        <a>
          4
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-5 uc-fe-pagination-item-before-jump-next"
        tabindex="0"
        title="5"
      >
        <a>
          5
        </a>
      </li>
      <li
        class="uc-fe-pagination-jump-next"
        tabindex="0"
        title="向后 5 页"
      >
        <i
          class="uc-fe-pagination-jump-icon uc-fe-icon icon__more-three c1"
          type="more-three"
        />
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-10"
        tabindex="0"
        title="10"
      >
        <a>
          10
        </a>
      </li>
      <li
        aria-disabled="false"
        class=" uc-fe-pagination-next"
        tabindex="0"
        title="下一页"
      >
        <i
          class="uc-fe-pagination-next-icon uc-fe-icon icon__right c1"
          type="right"
        />
      </li>
    </ul>
  </div>
  <div
    class="demo-wrap"
  >
    <ul
      class="uc-fe-pagination uc-fe-pagination-md uc-fe-pagination-simple"
      unselectable="unselectable"
    >
      <div
        class="uc-fe-numberinput uc-fe-numberinput-styletype-pagination c2"
      >
        <div>
          <span
            class="c3 uc-fe-numberinput-handler-up uc-fe-numberinput-handler c4"
            unselectable="unselectable"
          >
            <i
              class="uc-fe-icon icon__right c1"
              type="right"
            />
          </span>
          <span
            class="c5 uc-fe-numberinput-handler-down uc-fe-numberinput-handler uc-fe-numberinput-handler-disabled c6"
            disabled=""
            unselectable="unselectable"
          >
            <i
              class="uc-fe-icon icon__left c1"
              type="left"
            />
          </span>
        </div>
        <div
          class="uc-fe-numberinput-input-wrap c7"
        >
          <input
            autocomplete="off"
            class="c8 uc-fe-numberinput-input c9"
            max="10"
            min="1"
            step="1"
            value="1"
          />
          <span
            class="c10 uc-fe-numberinput-suffix c11"
          >
            <span
              class="uc-fe-pagination-quick-jumper-text"
            >
              /10
            </span>
          </span>
        </div>
      </div>
    </ul>
  </div>
</div>
`;

exports[`Pagination demo -- size 1`] = `
.c1 {
  vertical-align: baseline;
}

.c2 {
  color: #6b798e;
  font-size: 12px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  display: inline-block;
  vertical-align: middle;
}

.c2 .uc-fe-pagination-item,
.c2 .uc-fe-pagination-prev,
.c2 .uc-fe-pagination-next,
.c2 .uc-fe-pagination-jump-prev,
.c2 .uc-fe-pagination-jump-next {
  outline: none;
  box-sizing: border-box;
  background-color: #fff;
  text-align: center;
  border-radius: 2px;
  margin-right: 5px;
  cursor: pointer;
  padding: 0 2px;
  display: inline-block;
  vertical-align: middle;
  min-width: 28px;
  height: 28px;
  line-height: 26px;
}

.c2 .uc-fe-pagination-item,
.c2 .uc-fe-pagination-prev,
.c2 .uc-fe-pagination-next {
  border: 1px solid #c3cad9;
}

.c2 .uc-fe-pagination-item:hover,
.c2 .uc-fe-pagination-prev:hover,
.c2 .uc-fe-pagination-next:hover {
  border-color: #4683e6;
  color: #4074e1;
}

.c2 .uc-fe-pagination-jump-prev:hover,
.c2 .uc-fe-pagination-jump-next:hover {
  color: #4074e1;
}

.c2 .uc-fe-pagination-item-active,
.c2 .uc-fe-pagination-item-active:hover {
  border-color: #4683e6;
  color: #4074e1;
  background-color: #f4f9ff;
  cursor: default;
}

.c2 .uc-fe-pagination-disabled,
.c2 .uc-fe-pagination-disabled:hover {
  border-color: #d9d9d9;
  background-color: #f7f7f7;
  cursor: not-allowed;
}

.c2 .uc-fe-pagination-prev-icon,
.c2 .uc-fe-pagination-next-icon {
  cursor: inherit;
}

.c2 .uc-fe-pagination-options,
.c2 .uc-fe-pagination-options-size-changer,
.c2 .uc-fe-pagination-options-quick-jumper {
  display: inline-block;
  vertical-align: middle;
}

.c2 .uc-fe-pagination-options-size-changer {
  margin-right: 5px;
}

.c2 .uc-fe-pagination-options-gobutton {
  margin-left: 5px;
}

.c0 {
  color: #6b798e;
  font-size: 12px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  display: inline-block;
  vertical-align: middle;
}

.c0 .uc-fe-pagination-item,
.c0 .uc-fe-pagination-prev,
.c0 .uc-fe-pagination-next,
.c0 .uc-fe-pagination-jump-prev,
.c0 .uc-fe-pagination-jump-next {
  outline: none;
  box-sizing: border-box;
  background-color: #fff;
  text-align: center;
  border-radius: 2px;
  margin-right: 5px;
  cursor: pointer;
  padding: 0 2px;
  display: inline-block;
  vertical-align: middle;
  min-width: 22px;
  height: 22px;
  line-height: 20px;
}

.c0 .uc-fe-pagination-item,
.c0 .uc-fe-pagination-prev,
.c0 .uc-fe-pagination-next {
  border: 1px solid #c3cad9;
}

.c0 .uc-fe-pagination-item:hover,
.c0 .uc-fe-pagination-prev:hover,
.c0 .uc-fe-pagination-next:hover {
  border-color: #4683e6;
  color: #4074e1;
}

.c0 .uc-fe-pagination-jump-prev:hover,
.c0 .uc-fe-pagination-jump-next:hover {
  color: #4074e1;
}

.c0 .uc-fe-pagination-item-active,
.c0 .uc-fe-pagination-item-active:hover {
  border-color: #4683e6;
  color: #4074e1;
  background-color: #f4f9ff;
  cursor: default;
}

.c0 .uc-fe-pagination-disabled,
.c0 .uc-fe-pagination-disabled:hover {
  border-color: #d9d9d9;
  background-color: #f7f7f7;
  cursor: not-allowed;
}

.c0 .uc-fe-pagination-prev-icon,
.c0 .uc-fe-pagination-next-icon {
  cursor: inherit;
}

.c0 .uc-fe-pagination-options,
.c0 .uc-fe-pagination-options-size-changer,
.c0 .uc-fe-pagination-options-quick-jumper {
  display: inline-block;
  vertical-align: middle;
}

.c0 .uc-fe-pagination-options-size-changer {
  margin-right: 5px;
}

.c0 .uc-fe-pagination-options-gobutton {
  margin-left: 5px;
}

.c3 {
  color: #6b798e;
  font-size: 12px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  display: inline-block;
  vertical-align: middle;
}

.c3 .uc-fe-pagination-item,
.c3 .uc-fe-pagination-prev,
.c3 .uc-fe-pagination-next,
.c3 .uc-fe-pagination-jump-prev,
.c3 .uc-fe-pagination-jump-next {
  outline: none;
  box-sizing: border-box;
  background-color: #fff;
  text-align: center;
  border-radius: 2px;
  margin-right: 5px;
  cursor: pointer;
  padding: 0 2px;
  display: inline-block;
  vertical-align: middle;
  min-width: 34px;
  height: 34px;
  line-height: 32px;
}

.c3 .uc-fe-pagination-item,
.c3 .uc-fe-pagination-prev,
.c3 .uc-fe-pagination-next {
  border: 1px solid #c3cad9;
}

.c3 .uc-fe-pagination-item:hover,
.c3 .uc-fe-pagination-prev:hover,
.c3 .uc-fe-pagination-next:hover {
  border-color: #4683e6;
  color: #4074e1;
}

.c3 .uc-fe-pagination-jump-prev:hover,
.c3 .uc-fe-pagination-jump-next:hover {
  color: #4074e1;
}

.c3 .uc-fe-pagination-item-active,
.c3 .uc-fe-pagination-item-active:hover {
  border-color: #4683e6;
  color: #4074e1;
  background-color: #f4f9ff;
  cursor: default;
}

.c3 .uc-fe-pagination-disabled,
.c3 .uc-fe-pagination-disabled:hover {
  border-color: #d9d9d9;
  background-color: #f7f7f7;
  cursor: not-allowed;
}

.c3 .uc-fe-pagination-prev-icon,
.c3 .uc-fe-pagination-next-icon {
  cursor: inherit;
}

.c3 .uc-fe-pagination-options,
.c3 .uc-fe-pagination-options-size-changer,
.c3 .uc-fe-pagination-options-quick-jumper {
  display: inline-block;
  vertical-align: middle;
}

.c3 .uc-fe-pagination-options-size-changer {
  margin-right: 5px;
}

.c3 .uc-fe-pagination-options-gobutton {
  margin-left: 5px;
}

<div>
  <div
    class="demo-wrap"
  >
    <ul
      class="uc-fe-pagination uc-fe-pagination-sm c0"
      unselectable="unselectable"
    >
      <li
        aria-disabled="true"
        class="uc-fe-pagination-disabled uc-fe-pagination-prev"
        title="上一页"
      >
        <i
          class="uc-fe-pagination-prev-icon uc-fe-icon icon__left c1"
          type="left"
        />
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-1 uc-fe-pagination-item-active"
        tabindex="0"
        title="1"
      >
        <a>
          1
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-2"
        tabindex="0"
        title="2"
      >
        <a>
          2
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-3"
        tabindex="0"
        title="3"
      >
        <a>
          3
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-4"
        tabindex="0"
        title="4"
      >
        <a>
          4
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-5 uc-fe-pagination-item-before-jump-next"
        tabindex="0"
        title="5"
      >
        <a>
          5
        </a>
      </li>
      <li
        class="uc-fe-pagination-jump-next"
        tabindex="0"
        title="向后 5 页"
      >
        <i
          class="uc-fe-pagination-jump-icon uc-fe-icon icon__more-three c1"
          type="more-three"
        />
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-10"
        tabindex="0"
        title="10"
      >
        <a>
          10
        </a>
      </li>
      <li
        aria-disabled="false"
        class=" uc-fe-pagination-next"
        tabindex="0"
        title="下一页"
      >
        <i
          class="uc-fe-pagination-next-icon uc-fe-icon icon__right c1"
          type="right"
        />
      </li>
    </ul>
  </div>
  <div
    class="demo-wrap"
  >
    <ul
      class="uc-fe-pagination uc-fe-pagination-md c2"
      unselectable="unselectable"
    >
      <li
        aria-disabled="true"
        class="uc-fe-pagination-disabled uc-fe-pagination-prev"
        title="上一页"
      >
        <i
          class="uc-fe-pagination-prev-icon uc-fe-icon icon__left c1"
          type="left"
        />
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-1 uc-fe-pagination-item-active"
        tabindex="0"
        title="1"
      >
        <a>
          1
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-2"
        tabindex="0"
        title="2"
      >
        <a>
          2
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-3"
        tabindex="0"
        title="3"
      >
        <a>
          3
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-4"
        tabindex="0"
        title="4"
      >
        <a>
          4
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-5 uc-fe-pagination-item-before-jump-next"
        tabindex="0"
        title="5"
      >
        <a>
          5
        </a>
      </li>
      <li
        class="uc-fe-pagination-jump-next"
        tabindex="0"
        title="向后 5 页"
      >
        <i
          class="uc-fe-pagination-jump-icon uc-fe-icon icon__more-three c1"
          type="more-three"
        />
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-10"
        tabindex="0"
        title="10"
      >
        <a>
          10
        </a>
      </li>
      <li
        aria-disabled="false"
        class=" uc-fe-pagination-next"
        tabindex="0"
        title="下一页"
      >
        <i
          class="uc-fe-pagination-next-icon uc-fe-icon icon__right c1"
          type="right"
        />
      </li>
    </ul>
  </div>
  <div
    class="demo-wrap"
  >
    <ul
      class="uc-fe-pagination uc-fe-pagination-lg c3"
      unselectable="unselectable"
    >
      <li
        aria-disabled="true"
        class="uc-fe-pagination-disabled uc-fe-pagination-prev"
        title="上一页"
      >
        <i
          class="uc-fe-pagination-prev-icon uc-fe-icon icon__left c1"
          type="left"
        />
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-1 uc-fe-pagination-item-active"
        tabindex="0"
        title="1"
      >
        <a>
          1
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-2"
        tabindex="0"
        title="2"
      >
        <a>
          2
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-3"
        tabindex="0"
        title="3"
      >
        <a>
          3
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-4"
        tabindex="0"
        title="4"
      >
        <a>
          4
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-5 uc-fe-pagination-item-before-jump-next"
        tabindex="0"
        title="5"
      >
        <a>
          5
        </a>
      </li>
      <li
        class="uc-fe-pagination-jump-next"
        tabindex="0"
        title="向后 5 页"
      >
        <i
          class="uc-fe-pagination-jump-icon uc-fe-icon icon__more-three c1"
          type="more-three"
        />
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-10"
        tabindex="0"
        title="10"
      >
        <a>
          10
        </a>
      </li>
      <li
        aria-disabled="false"
        class=" uc-fe-pagination-next"
        tabindex="0"
        title="下一页"
      >
        <i
          class="uc-fe-pagination-next-icon uc-fe-icon icon__right c1"
          type="right"
        />
      </li>
    </ul>
  </div>
</div>
`;

exports[`Pagination demo -- total 1`] = `
.c1 {
  vertical-align: baseline;
}

.c0 {
  color: #6b798e;
  font-size: 12px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  display: inline-block;
  vertical-align: middle;
}

.c0 .uc-fe-pagination-item,
.c0 .uc-fe-pagination-prev,
.c0 .uc-fe-pagination-next,
.c0 .uc-fe-pagination-jump-prev,
.c0 .uc-fe-pagination-jump-next {
  outline: none;
  box-sizing: border-box;
  background-color: #fff;
  text-align: center;
  border-radius: 2px;
  margin-right: 5px;
  cursor: pointer;
  padding: 0 2px;
  display: inline-block;
  vertical-align: middle;
  min-width: 28px;
  height: 28px;
  line-height: 26px;
}

.c0 .uc-fe-pagination-item,
.c0 .uc-fe-pagination-prev,
.c0 .uc-fe-pagination-next {
  border: 1px solid #c3cad9;
}

.c0 .uc-fe-pagination-item:hover,
.c0 .uc-fe-pagination-prev:hover,
.c0 .uc-fe-pagination-next:hover {
  border-color: #4683e6;
  color: #4074e1;
}

.c0 .uc-fe-pagination-jump-prev:hover,
.c0 .uc-fe-pagination-jump-next:hover {
  color: #4074e1;
}

.c0 .uc-fe-pagination-item-active,
.c0 .uc-fe-pagination-item-active:hover {
  border-color: #4683e6;
  color: #4074e1;
  background-color: #f4f9ff;
  cursor: default;
}

.c0 .uc-fe-pagination-disabled,
.c0 .uc-fe-pagination-disabled:hover {
  border-color: #d9d9d9;
  background-color: #f7f7f7;
  cursor: not-allowed;
}

.c0 .uc-fe-pagination-prev-icon,
.c0 .uc-fe-pagination-next-icon {
  cursor: inherit;
}

.c0 .uc-fe-pagination-options,
.c0 .uc-fe-pagination-options-size-changer,
.c0 .uc-fe-pagination-options-quick-jumper {
  display: inline-block;
  vertical-align: middle;
}

.c0 .uc-fe-pagination-options-size-changer {
  margin-right: 5px;
}

.c0 .uc-fe-pagination-options-gobutton {
  margin-left: 5px;
}

<div>
  <div
    class="demo-wrap"
  >
    <ul
      class="uc-fe-pagination uc-fe-pagination-md c0"
      unselectable="unselectable"
    >
      <li
        aria-disabled="true"
        class="uc-fe-pagination-disabled uc-fe-pagination-prev"
        title="上一页"
      >
        <i
          class="uc-fe-pagination-prev-icon uc-fe-icon icon__left c1"
          type="left"
        />
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-1 uc-fe-pagination-item-active"
        tabindex="0"
        title="1"
      >
        <a>
          1
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-2"
        tabindex="0"
        title="2"
      >
        <a>
          2
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-3"
        tabindex="0"
        title="3"
      >
        <a>
          3
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-4"
        tabindex="0"
        title="4"
      >
        <a>
          4
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-5 uc-fe-pagination-item-before-jump-next"
        tabindex="0"
        title="5"
      >
        <a>
          5
        </a>
      </li>
      <li
        class="uc-fe-pagination-jump-next"
        tabindex="0"
        title="向后 5 页"
      >
        <i
          class="uc-fe-pagination-jump-icon uc-fe-icon icon__more-three c1"
          type="more-three"
        />
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-10"
        tabindex="0"
        title="10"
      >
        <a>
          10
        </a>
      </li>
      <li
        aria-disabled="false"
        class=" uc-fe-pagination-next"
        tabindex="0"
        title="下一页"
      >
        <i
          class="uc-fe-pagination-next-icon uc-fe-icon icon__right c1"
          type="right"
        />
      </li>
    </ul>
  </div>
  <div
    class="demo-wrap"
  >
    <ul
      class="uc-fe-pagination uc-fe-pagination-md c0"
      unselectable="unselectable"
    >
      <li
        aria-disabled="true"
        class="uc-fe-pagination-disabled uc-fe-pagination-prev"
        title="上一页"
      >
        <i
          class="uc-fe-pagination-prev-icon uc-fe-icon icon__left c1"
          type="left"
        />
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-1 uc-fe-pagination-item-active"
        tabindex="0"
        title="1"
      >
        <a>
          1
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-2"
        tabindex="0"
        title="2"
      >
        <a>
          2
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-3"
        tabindex="0"
        title="3"
      >
        <a>
          3
        </a>
      </li>
      <li
        aria-disabled="false"
        class=" uc-fe-pagination-next"
        tabindex="0"
        title="下一页"
      >
        <i
          class="uc-fe-pagination-next-icon uc-fe-icon icon__right c1"
          type="right"
        />
      </li>
    </ul>
  </div>
</div>
`;

exports[`Pagination demo -- uncontrolled 1`] = `
.c1 {
  vertical-align: baseline;
}

.c0 {
  color: #6b798e;
  font-size: 12px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  display: inline-block;
  vertical-align: middle;
}

.c0 .uc-fe-pagination-item,
.c0 .uc-fe-pagination-prev,
.c0 .uc-fe-pagination-next,
.c0 .uc-fe-pagination-jump-prev,
.c0 .uc-fe-pagination-jump-next {
  outline: none;
  box-sizing: border-box;
  background-color: #fff;
  text-align: center;
  border-radius: 2px;
  margin-right: 5px;
  cursor: pointer;
  padding: 0 2px;
  display: inline-block;
  vertical-align: middle;
  min-width: 28px;
  height: 28px;
  line-height: 26px;
}

.c0 .uc-fe-pagination-item,
.c0 .uc-fe-pagination-prev,
.c0 .uc-fe-pagination-next {
  border: 1px solid #c3cad9;
}

.c0 .uc-fe-pagination-item:hover,
.c0 .uc-fe-pagination-prev:hover,
.c0 .uc-fe-pagination-next:hover {
  border-color: #4683e6;
  color: #4074e1;
}

.c0 .uc-fe-pagination-jump-prev:hover,
.c0 .uc-fe-pagination-jump-next:hover {
  color: #4074e1;
}

.c0 .uc-fe-pagination-item-active,
.c0 .uc-fe-pagination-item-active:hover {
  border-color: #4683e6;
  color: #4074e1;
  background-color: #f4f9ff;
  cursor: default;
}

.c0 .uc-fe-pagination-disabled,
.c0 .uc-fe-pagination-disabled:hover {
  border-color: #d9d9d9;
  background-color: #f7f7f7;
  cursor: not-allowed;
}

.c0 .uc-fe-pagination-prev-icon,
.c0 .uc-fe-pagination-next-icon {
  cursor: inherit;
}

.c0 .uc-fe-pagination-options,
.c0 .uc-fe-pagination-options-size-changer,
.c0 .uc-fe-pagination-options-quick-jumper {
  display: inline-block;
  vertical-align: middle;
}

.c0 .uc-fe-pagination-options-size-changer {
  margin-right: 5px;
}

.c0 .uc-fe-pagination-options-gobutton {
  margin-left: 5px;
}

<div>
  <div
    class="demo-wrap"
  >
    <ul
      class="uc-fe-pagination uc-fe-pagination-md c0"
      unselectable="unselectable"
    >
      <li
        aria-disabled="true"
        class="uc-fe-pagination-disabled uc-fe-pagination-prev"
        title="上一页"
      >
        <i
          class="uc-fe-pagination-prev-icon uc-fe-icon icon__left c1"
          type="left"
        />
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-1 uc-fe-pagination-item-active"
        tabindex="0"
        title="1"
      >
        <a>
          1
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-2"
        tabindex="0"
        title="2"
      >
        <a>
          2
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-3"
        tabindex="0"
        title="3"
      >
        <a>
          3
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-4"
        tabindex="0"
        title="4"
      >
        <a>
          4
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-5 uc-fe-pagination-item-before-jump-next"
        tabindex="0"
        title="5"
      >
        <a>
          5
        </a>
      </li>
      <li
        class="uc-fe-pagination-jump-next"
        tabindex="0"
        title="向后 5 页"
      >
        <i
          class="uc-fe-pagination-jump-icon uc-fe-icon icon__more-three c1"
          type="more-three"
        />
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-10"
        tabindex="0"
        title="10"
      >
        <a>
          10
        </a>
      </li>
      <li
        aria-disabled="false"
        class=" uc-fe-pagination-next"
        tabindex="0"
        title="下一页"
      >
        <i
          class="uc-fe-pagination-next-icon uc-fe-icon icon__right c1"
          type="right"
        />
      </li>
    </ul>
  </div>
  <div
    class="demo-wrap"
  >
    <ul
      class="uc-fe-pagination uc-fe-pagination-md c0"
      unselectable="unselectable"
    >
      <li
        aria-disabled="true"
        class="uc-fe-pagination-disabled uc-fe-pagination-prev"
        title="上一页"
      >
        <i
          class="uc-fe-pagination-prev-icon uc-fe-icon icon__left c1"
          type="left"
        />
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-1 uc-fe-pagination-item-active"
        tabindex="0"
        title="1"
      >
        <a>
          1
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-2"
        tabindex="0"
        title="2"
      >
        <a>
          2
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-3"
        tabindex="0"
        title="3"
      >
        <a>
          3
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-4"
        tabindex="0"
        title="4"
      >
        <a>
          4
        </a>
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-5 uc-fe-pagination-item-before-jump-next"
        tabindex="0"
        title="5"
      >
        <a>
          5
        </a>
      </li>
      <li
        class="uc-fe-pagination-jump-next"
        tabindex="0"
        title="向后 5 页"
      >
        <i
          class="uc-fe-pagination-jump-icon uc-fe-icon icon__more-three c1"
          type="more-three"
        />
      </li>
      <li
        class="uc-fe-pagination-item uc-fe-pagination-item-10"
        tabindex="0"
        title="10"
      >
        <a>
          10
        </a>
      </li>
      <li
        aria-disabled="false"
        class=" uc-fe-pagination-next"
        tabindex="0"
        title="下一页"
      >
        <i
          class="uc-fe-pagination-next-icon uc-fe-icon icon__right c1"
          type="right"
        />
      </li>
    </ul>
  </div>
</div>
`;
